Accordion visibility is solved.

--- a/src/main/webapp/css/accordion.css
+++ b/src/main/webapp/css/accordion.css
@@ -5,6 +5,7 @@
 	min-width: 100px;
 	max-width: 250px;
 	max-height: 15px;
+        visibility: hidden;
 }
 .panel-title{
 	text-align: center;
